# gameOfLife

./: CMakeLists.txt  input.life
Src/: Cell.h  CellProcessor.cpp  CellProcessor.h  ConsoleDrawer.cpp  ConsoleDrawer.h  Drawer.h  Field.cpp  Field.h  Game.cpp  Game.h  NcursesDrawer.cpp  NcursesDrawer.h  State.cpp  State.h  main.cpp
